Migrate from MockServer to Wiremock
* Replace dependency
* Remove outdated unirest-java
* Update tests